Где пусто, туда шапку и подвал

--- a/kamaz/html/index.html
+++ b/kamaz/html/index.html
@@ -10,10 +10,14 @@
 </head>
 
 <body>
-    <h1>Hello</h1>
-    <p>Hi</p>
-    <hr>
-    <a href="#">Privet</a>
+    <div>
+        <header>Пусто</header>
+        <div class="center">
+
+        </div>
+    </div>
+    <footer>Пусто</footer>
+    <script src="../js/index.js"></script>
 </body>
 
 </html>
