--- a/kamaz/html/index.html
+++ b/kamaz/html/index.html
@@ -5,16 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <title>KAMAZ</title>
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 
 <body>
-    <div>
-        <header>Пусто</header>
-        <div class="center">
-
+    <header>Пусто</header>
+    <div class="center">
+        <div class="slider">
+            <div class="slider-line">
+                <img src="../images/1.jpg" alt="">
+                <img src="../images/2.jpg" alt="">
+                <img src="../images/3.jpg" alt="">
+                <img src="../images/4.jpg" alt="">
+                <img src="../images/5.jpg" alt="">
+                <img src="../images/6.jpg" alt="">
+                <img src="../images/7.jpg" alt="">
+            </div>
         </div>
+        <button class="slider-prev"><img class="slider-btn" src="../images/prev.png"></button>
+        <button class="slider-next"><img class="slider-btn" src="../images/next.png"></button>
     </div>
     <footer>Пусто</footer>
     <script src="../js/index.js"></script>
