--- a/kamaz/html/index.html
+++ b/kamaz/html/index.html
@@ -12,19 +12,21 @@
 <body>
     <header>Пусто</header>
     <div class="center">
-        <div class="slider">
-            <div class="slider-line">
-                <img src="../images/1.jpg" alt="">
-                <img src="../images/2.jpg" alt="">
-                <img src="../images/3.jpg" alt="">
-                <img src="../images/4.jpg" alt="">
-                <img src="../images/5.jpg" alt="">
-                <img src="../images/6.jpg" alt="">
-                <img src="../images/7.jpg" alt="">
+        <div class="sl">
+            <button class="slider-prev"><img class="slider-btn" src="../images/prev.png"></button>
+            <div class="slider">
+                <div class="slider-line">
+                    <img src="../images/1.jpg" alt="">
+                    <img src="../images/2.jpg" alt="">
+                    <img src="../images/3.jpg" alt="">
+                    <img src="../images/4.jpg" alt="">
+                    <img src="../images/5.jpg" alt="">
+                    <img src="../images/6.jpg" alt="">
+                    <img src="../images/7.jpg" alt="">
+                </div>
             </div>
+            <button class="slider-next"><img class="slider-btn" src="../images/next.png"></button>
         </div>
-        <button class="slider-prev"><img class="slider-btn" src="../images/prev.png"></button>
-        <button class="slider-next"><img class="slider-btn" src="../images/next.png"></button>
     </div>
     <footer>Пусто</footer>
     <script src="../js/index.js"></script>
