--- a/kamaz/html/index.html
+++ b/kamaz/html/index.html
@@ -10,25 +10,13 @@
 </head>
 
 <body>
-    <header>Пусто</header>
-    <div class="center">
-        <div class="sl">
-            <button class="slider-prev"><img class="slider-btn" src="../images/prev.png"></button>
-            <div class="slider">
-                <div class="slider-line">
-                    <img src="../images/1.jpg" alt="">
-                    <img src="../images/2.jpg" alt="">
-                    <img src="../images/3.jpg" alt="">
-                    <img src="../images/4.jpg" alt="">
-                    <img src="../images/5.jpg" alt="">
-                    <img src="../images/6.jpg" alt="">
-                    <img src="../images/7.jpg" alt="">
-                </div>
-            </div>
-            <button class="slider-next"><img class="slider-btn" src="../images/next.png"></button>
+    <div>
+        <header>Пусто</header>
+        <div class="center">
+
         </div>
     </div>
-    <footer>Пусто</footer>
+    <footer>ДА</footer>
     <script src="../js/index.js"></script>
 </body>
 
