Пока чекни, что сделал

--- a/kamaz/html/index.html
+++ b/kamaz/html/index.html
@@ -16,10 +16,10 @@
             <a href="" class="logo"><img src="https://kamaz.ru/bitrix/templates/main/images/logo.png" alt="KAMAZ" title="KAMAZ"></a>
             <per class ="navbar_menu">
                 <a target="_blank" href="#">Call-центр с 6:00 - 22:00 МСК</a>
+                <a class="phone" href="#">8 (800) 555-00-99</a>
+                <a href="" class="img1"><img src="https://cdn-icons-png.flaticon.com/512/0/619.png" width="26" height="20" title="KAMAZ"></a>
             </per>
-            <b class="phone">
-                <span><i></i>8 (800) 555-00-99</span>
-            </b>
+           
             
         </div>
     </nav>
