--- a/kamaz/html/index.html
+++ b/kamaz/html/index.html
@@ -95,7 +95,7 @@
                     <li><a href="#">Вопрос-ответ</a></li>
                 </ul>
             </li>
-            <li><a href="#">ПРЕСС-ЦЕНТР</a>
+            <li><a href="../html/contact.html">ПРЕСС-ЦЕНТР</a>
                 <ul>
                     <li><a href="#">ПРЕСС-ЦЕНТР</a></li>
                     <li><a href="#">НОВОСТИ</a></li>
