--- a/kamaz/html/index.html
+++ b/kamaz/html/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KAMAZ</title>
+    <script src="../js/index.js"></script>
+    <link rel="stylesheet" type="text/css" href="../js/index.js/" id="scale-link">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
