--- a/kamaz/html/index.html
+++ b/kamaz/html/index.html
@@ -15,7 +15,7 @@
 
         
         <div class="container">
-            <a href="" class="logo"><img src="https://kamaz.ru/bitrix/templates/main/images/logo.png" alt="KAMAZ"
+            <a href="index.html" class="logo"><img src="https://kamaz.ru/bitrix/templates/main/images/logo.png" alt="KAMAZ"
                     title="KAMAZ"></a>
             <per class="navbar_menu">
                 <aq class="call-center">Call-центр с 6:00 - 22:00 МСК</aq>
@@ -28,7 +28,7 @@
             <ul>
 			    <li><a >О КОМПАНИИ</a>
                     <ul class="column">
-                        <li><a href="#">О нас</a></li>
+                        <li><a href="about.html">О нас</a></li>
                         <li><a href="#">Наши услуги </a></li>
                         <li><a href="#">Наши работы</a></li>
                         <li><a href="#">Наша команда</a></li>
@@ -82,7 +82,7 @@
                         
                         <menu>
                             <ul class="column">
-                                <li><a href="#">О нас</a></li>
+                                <li><a href="about.html">О нас</a></li>
                                 <li><a href="#">Наши услуги </a></li>
                                 <li><a href="#">Наши работы</a></li>
                                 <li><a href="#">Наша команда</a></li>
