--- a/kamaz/html/about.html
+++ b/kamaz/html/about.html
@@ -31,7 +31,7 @@
                         <li><a href="about.html">О нас</a></li>
                         <li><a href="#">Наши услуги </a></li>
                         <li><a href="#">Наши работы</a></li>
-                        <li><a href="#">Наша команда</a></li>
+                        <li><a href="team.html">Наша команда</a></li>
                         <li><a href="contact.html">Контакты</a></li>
                     </ul>
                     <!--<ul class="column"> 
@@ -121,7 +121,7 @@
                                 <li><a href="about.html">О нас</a></li>
                                 <li><a href="#">Наши услуги </a></li>
                                 <li><a href="#">Наши работы</a></li>
-                                <li><a href="#">Наша команда</a></li>
+                                <li><a href="team.html">Наша команда</a></li>
                                 <li><a href="contact.html">Контакты</a></li>
                             </ul>
                 </menu>
