--- a/kamaz/html/about.html
+++ b/kamaz/html/about.html
@@ -30,7 +30,7 @@
                     <ul class="column">
                         <li><a href="about.html">О нас</a></li>
                         <li><a href="#">Наши услуги </a></li>
-                        <li><a href="#">Наши работы</a></li>
+                        <li><a href="product.html">Наши работы</a></li>
                         <li><a href="team.html">Наша команда</a></li>
                         <li><a href="contact.html">Контакты</a></li>
                     </ul>
@@ -120,7 +120,7 @@
                             <ul class="column">
                                 <li><a href="about.html">О нас</a></li>
                                 <li><a href="#">Наши услуги </a></li>
-                                <li><a href="#">Наши работы</a></li>
+                                <li><a href="product.html">Наши работы</a></li>
                                 <li><a href="team.html">Наша команда</a></li>
                                 <li><a href="contact.html">Контакты</a></li>
                             </ul>
