--- a/kamaz/html/contact.html
+++ b/kamaz/html/contact.html
@@ -33,7 +33,7 @@
                     <ul class="column">
                         <li><a href="about.html">О нас</a></li>
                         <li><a href="#">Наши услуги </a></li>
-                        <li><a href="#">Наши работы</a></li>
+                        <li><a href="product.html">Наши работы</a></li>
                         <li><a href="team.html">Наша команда</a></li>
                         <li><a href="contact.html">Контакты</a></li>
                     </ul>
@@ -78,7 +78,7 @@
                           <ul class="column">
                               <li><a href="about.html">О нас</a></li>
                               <li><a href="#">Наши услуги </a></li>
-                              <li><a href="#">Наши работы</a></li>
+                              <li><a href="product.html">Наши работы</a></li>
                               <li><a href="team.html">Наша команда</a></li>
                               <li><a href="contact.html">Контакты</a></li>
                           </ul>
