--- a/kamaz/html/product.html
+++ b/kamaz/html/product.html
@@ -54,33 +54,80 @@
         }
     </style>
     <div class="center">
-    <div> <h1>В наших рядах:</h1>
+        <div>
+            <h1>Новинки</h1>		
+    	</div>
         <ol>
-            <h3><li>Иван Петров</h3> опытный менеджер по продажам, специализируется на технике КамАЗ, хорошо знает рынок и потребности клиентов.</li>
-            <h3><li>Анна Сидорова</h3>ответственный специалист по логистике, занимается организацией доставки техники клиентам в срок.</li>
-            <h3><li>Дмитрий Кузнецов</h3>профессиональный маркетолог, разрабатывает эффективные стратегии продвижения продукции компании на рынке.</li>
-            <h3><li>Елена Иванова</h3> квалифицированный сервис-менеджер, занимается обслуживанием и ремонтом техники у клиентов и на базе компании.</li>
-            <h3><li>Сергей Николаев</h3>талантливый продавец, имеет высокие навыки переговоров и умеет находить индивидуальный подход к каждому клиенту.</li>
-            <h3><li>Мария Козлова</h3>ответственный специалист по закупкам, отвечает за своевременную поставку необходимых деталей и комплектующих для КамАЗов.</li>
-            <h3><li>Александр Романов</h3>опытный инженер-технолог, участвует в разработке новых моделей КамАЗов и оптимизации производственных процессов.</li>
-            <h3><li>Ольга Васильева</h3>квалифицированный финансовый специалист, занимается учетом и анализом финансовой деятельности компании.</li>
-            <h3><li>Никита Попов</h3>молодой и перспективный специалист, недавно приступивший к работе в компании и готовый учиться новым навыкам и технологиям.</li>
+            <br><li><div>
+                
+                <p>
+                <img src="../images/28d0368331f8f5fb37b33e0c493f17d1.jpg">
+                </p>
+                </a>
+                <p>
+                42261С/НЕФАЗ-42111М
+                </p>
+                Полная масса а/м - 12700/10700 кг <br>
+                Снаряженная масса - 9700 кг<br>
+                Двигатель 285 л.с. КПП&nbsp; 9-ти ступенчатая<br>
+                Число пассажирских мест в салоне - 20<br>
+                Дорожный просвет - 385 мм<br>
+                Задняя пневматическая подвеска РОСТАР<br>
+                <i>Цена 15 000 000 руб</i>
+            </div></li><br>
+        <li><div>
+                <img width="100" src="../images/6520-7080-49 для сайта.jpg" height="43"></a>&nbsp;
+                <p>6520-49 (В5) с улучшенными характеристиками</p>
+                Самосвал с задней разгрузкой, прямоугольная платформа <strong>20 куб.м. с обогревом</strong>, полог с механизмом скручивания, дополнительная лестница, МКБ, МОБ, <strong>дв.&nbsp; КАМАЗ 689.510-400, 390 л.с.(Eвро-5)</strong>, система нейтрализ. ОГ(AdBlue), КП 16-ти ступенчатая, ДЗК, топливный бак 350л, грузоподъемность 26,575 т.
+            <p><strong>Кабина Рестайлинг-2</strong><br></p>
+                Усиленная передняя подвеска-9 т.<br>
+                <p>
+                Рама из высокопрочной стали S700MC c увеличенной в 5 раз коррозионной защитой.
+                </p>
+                <p>
+                Ведущие мосты под нагрузку 16 тонн с передаточным отношением 5,262.
+                </p>
+                <p>
+                Отопитель кабины.
+                </p>
+                <p>
+                Кондиционер.
+                </p>
+                <p>
+                Светодиодная оптика (ДХО, указатели поворота).
+                </p>
+                Круиз-контроль.<br>
+                
+                <i>Цена 20 000 000 руб</i>
+            </div></li><br>
+
+        <li><div>
+                <img width="100" src="../images/65201-7080-49 для сайта.jpg"></a>&nbsp;
+                <p>65201-49 (В5) с улучшенными характеристиками</p>
+                Самосвал с задней разгрузкой, прямоугольная платформа <strong>25 куб.м. с обогревом</strong>, полог с механизмом скручивания, дополнительная лестница, МКБ, МОБ, <strong>дв.&nbsp; КАМАЗ 689.510-400, 390 л.с.(Eвро-5)</strong>, система нейтрализ. ОГ(AdBlue), КП 16-ти ступенчатая, ДЗК, топливный бак 350л, грузоподъемность 32,57 т.
+                <p><strong>Кабина Рестайлинг-2</strong><br></p>
+                Усиленная передняя подвеска-9 т.<br>
+                <p>
+                Рама из высокопрочной стали S700MC c увеличенной в 5 раз коррозионной защитой.
+                </p>
+                <p>
+                Ведущие мосты под нагрузку 16 тонн с передаточным отношением 5,262.
+                </p>
+                <p>
+                Отопитель кабины.
+                </p>
+                <p>
+                Кондиционер.
+                </p>
+                <p>
+                Светодиодная оптика (ДХО, указатели поворота).
+                </p>
+                Круиз-контроль.<br>
+                <i>Цена 20 000 000 руб</i>
+            </div></li>
         </ol>
-     </div>
-     <div class="sl">
-        <button class="slider-prev"><img class="slider-btn" src="../images/prev.png"></button>
-        <div class="slider">
-            <div class="slider-line">
-                <img src="../images/young_img1.jpg" alt="">
-                <img src="../images/young_img2.jpg" alt="">
-                <img src="../images/young_img3.jpg" alt="">
-                <img src="../images/young_img4.jpg" alt="">
-                <img src="../images/young_img5.jpg" alt="">
-            </div>
-        </div>
-        <button class="slider-next"><img class="slider-btn" src="../images/next.png"></button>
-    </div>
-    </div>
+
+</div>
     <footer class="footer">
         <div class="footer-top-block">
             <div class="center-block">
