--- a/kamaz/html/team.html
+++ b/kamaz/html/team.html
@@ -29,7 +29,7 @@
 			    <li><a >О КОМПАНИИ</a>
                     <ul class="column">
                         <li><a href="about.html">О нас</a></li>
-                        <li><a href="#">Наши услуги </a></li>
+                        <li><a href="services.html">Наши услуги </a></li>
                         <li><a href="product.html">Наши работы</a></li>
                         <li><a href="team.html">Наша команда</a></li>
                         <li><a href="contact.html">Контакты</a></li>
@@ -91,7 +91,7 @@
                         <menu>
                             <ul class="column">
                                 <li><a href="about.html">О нас</a></li>
-                                <li><a href="#">Наши услуги </a></li>
+                                <li><a href="services.html">Наши услуги </a></li>
                                 <li><a href="product.html">Наши работы</a></li>
                                 <li><a href="team.html">Наша команда</a></li>
                                 <li><a href="contact.html">Контакты</a></li>
